name:                exmpl
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Grigory Bordyugov
maintainer:          gregbg@gmail.com
copyright:           2017 Grigory Bordyugov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable exmpl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , lens
                     , gogol >= 0.1.1
                     , gogol-bigquery >= 0.1.1
                     , gogol-storage >= 0.1.1
